@@ -2,6 +2,9 @@
 * don't scan block devices or character devices
 * don't enable ubifs, since I have not added the code yet :-/
 * add code to store the configuration globally
+* reenable ubifs
+* add unpacker for ubifs, currently does not work correctly, but unpacks too
+much. This needs to be fixed
 
 2011-01-29
 * add -d to cpio, so it actually creates directories
